--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,15 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Custom
+# Emacs Backup file
+*~
+
+# Template file
+template/
+
+# Deprecated files
+deprecated.js
+
+
